--- a/ChatWave/Chat/static/chatstyle.css
+++ b/ChatWave/Chat/static/chatstyle.css
@@ -726,6 +726,14 @@ audio {
     margin-top: 10px !important;
 }
 
+.sent-image {
+    width: 400px !important;    
+    height: 300px !important;  
+    border-radius: 10px !important; 
+    margin-top: 10px !important;
+
+}
+
 
 
 
